<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@+id/txtUsername"
			android:text="@string/username" />

		<EditText
			android:id="@+id/txtUsername"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:autofillHints="username"
			android:inputType="textPersonName"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@+id/txtCreatureKey"
			android:text="@string/key" />

		<TextView
			android:id="@+id/txtCreatureKey"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="5dp"
			android:textIsSelectable="true" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@+id/txtName"
			android:text="@string/name" />

		<EditText
			android:id="@+id/txtName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="2dp"
			android:inputType="text" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@+id/txtType"
			android:text="@string/type" />

		<EditText
			android:id="@+id/txtType"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="2dp"
			android:inputType="text" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnPrev"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/prev" />

		<Button
			android:id="@+id/btnInsert"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/insert" />

		<Button
			android:id="@+id/btnUpdate"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/update" />

		<Button
			android:id="@+id/btnDelete"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/delete" />

		<Button
			android:id="@+id/btnNext"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/next" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnDeleteAll"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/deleteAll" />
	</LinearLayout>
</LinearLayout>
